# joom

./: .gitignore  CMakeLists.txt  GEMINI.md  Info.plist.in  LICENSE  README.md  build_cave_update.sh  build_final.sh  build_with_audio.sh  build_with_lighting.sh  convert_mp3_to_wav.sh  hud_controls_update.txt  loadCustomSounds_fix.cpp  loadCustomSounds_v2.cpp  package_macos.sh  push_to_github.sh  renderFloorAndCeiling_fix.cpp  renderFloorAndCeiling_optimized.cpp
include/: AudioManager.h  Chunk.h  Game.h  HUD.h  ItemManager.h  LightSystem.h  Map.h  MapGenerator.h  Monster.h  Pathfinder.h  Player.h  Renderer.h  TextureManager.h
memory-bank/: active-context.md  decision-log.md  product-context.md  progress.md
sounds/: README.md
src/: AudioManager.cpp  Game.cpp  HUD.cpp  ItemManager.cpp  LightSystem.cpp  Map.cpp  MapGenerator.cpp  Monster.cpp  Pathfinder.cpp  Player.cpp  Renderer.cpp  TextureManager.cpp  main.cpp
textures/: README.md
